# ChongoChingi

./: .gitignore  .pdm.toml  1  1j.txt  README.private.md  TODO  amistad.yml  ansible.cfg  b2.yml  backup.yml  bastet.yml  comet.yml  drittenheim.yml  dumuzi.yml  earth-central.yml  epic-sniper.yml  filters.yml  foo.yml  hosts  ilum.yml  jacky-hullot.yml  jacky.txt  janku.yml  jebel_krong.yml  jebel_sam.yml  jkrong.yml  kathmandu.yml  kinomi.yml  klendathu.yml  kotokami.yml  kowareta.yml  kuro-raiko.yml  kuro.yml  mc.yml  megalonyx.yml  muckrobin.yml  ninkasi.yml  nolan.yml  notes.md  oliver.yml  (+24 more)
docs/: networks.md  nginx.md
files/: .bash_profile  .gitconfig  .pagureconfig  .restic_info  .taskrc  .vimrc  .vimrc.bak  k8s_dash_admin_token  restic_includes
files/.gnupg/: gpg-agent.conf  gpg.conf  pubring.gpg  pubring.gpg~  random_seed  secring.gpg  tofu.db  trustdb.gpg  zach zach@mailup.net (0x75B53026EFE5FD17) pub-sec.asc  zach zach@mailup.net (0x75B53026EFE5FD17) pub.asc  zach@mailup.net (0x5EAA3D1CF1A33A936FD8F21B75B53026EFE5FD17) rev.asc
files/.ssh/: config  (+4 more)
group_vars/: debian  desktop  desktops  lan  server
host_vars/: amistad  bastet  comet.tsundoku.pw  drittenheim.two-bit.space  dumuzi  dumuzi.local  earth-central  epic-sniper.tsundoku.pw  ilum  ilum.local  jacky-hullot.grobble.lan  jacky-hullot.local  janku.tsundoku.pw  karasu.two-bit.space  kathmandu.tsundoku.pw  kinomi.tsundoku.pw  klendathu  kotokami.badkuub.club  kotokami.segfawlty.space  kotokami.two-bit.space  kujira.segfawlty.space  kuro-raiko.tsundoku.pw  localhost  megalonyx.tsundoku.pw  muckrobin.grobble.lan  muckrobin.local  ninkasi  ninkasi.local  penguinus.tsundoku.pw  pi3b0.segfawlty.space  primus.yml  redline.badkuub.club  renga.tsundoku.pw  riss  samarkand  sevastopol.grobble.lan  shoryuji.badkuub.club  skaidon  sorex.tsundoku.pw  tatooine  (+6 more)
inventory/: rke2.yml
notes/: .notes.md.swp  .riss_facts.yml.swp  notes.md  riss_facts.yml  synchronize
pb-archive/: ninkasi.yml
playbooks/: azuchi.yml  backups_b2.yml  bitwarden.yml  caddy_k8s.yml  common.yml  coredns.yml  devel.yml  extras.yml  hashi.yml  homeassistant.yml  k3s.yml  k3s_dashboards.yml  k3s_metallb.yml  k3s_prometheus_grafana.yml  k3s_uninstall.yml  kinomi.yml  kohei4pi.yml  kotokami.yml  kowareta.yml  kube-monsters.yml  kujira.yml  lobby.yml  main.yml  microshift.yml  monitoring.yml  nebulae.yml  network.yml  nfs.yml  nginx.yml  paper_mc_oliver.yml  papermc.yml  pi.yml  pi3b0.yml  podman-kujira.yml  podman.yml  restic-backup.yml  restic_b2.yml  rke2.yml  rpmfusion.yml  servers.yml  (+13 more)
roles/: restic-backup
scripts/: cilium_cli.sh
vault/: bw.yml  restic_info
(+702 files in other folders)
