[tool.poetry]
name = "f34ansible"
version = "0.1.0"
description = ""
authors = ["XakV <zachvatwork@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^3.3.0"
ansible-lint = "^5.0.7"

[tool.poetry.dev-dependencies]
paramiko = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
