[tool.poetry]
name = "Xaxansible"
version = "0.3.0"
description = ""
authors = ["XakV <zachvatwork@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^7.0"
ansible-core = "^2.13.1"
ansible-lint = "^6.3.0"
bracex = "2.2.1"
cffi = "1.15.0"
colorama = "0.4.4"
commonmark = "0.9.1"
cryptography = "36.0.1"
enrich = "1.2.6"
Jinja2 = "3.0.3"
jmespath = "0.10.0"
MarkupSafe = "2.0.1"
packaging = "21.3"
pycparser = "2.21"
Pygments = "2.11.1"
pyparsing = "3.0.6"
PyYAML = "6.0"
resolvelib = "0.5.4"
rich = "10.16.1"
tenacity = "8.0.1"
wcmatch = "8.3"

[tool.poetry.dev-dependencies]


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[project]
name = "Xaxansible"
version = "0.2.0"
description = ""
authors = [
    {name = "XakV", email = "zachvatwork@gmail.com"},
    {name = "XakV",email = "zachvatwork@gmail.com"},
]
dependencies = ["ansible<7.0.0,>=6.0.0", "ansible-core<3.0.0,>=2.13.1", "ansible-lint<7.0.0,>=6.3.0", "bracex==2.2.1", "cffi==1.15.0", "colorama==0.4.4", "commonmark==0.9.1", "cryptography==36.0.1", "enrich==1.2.6", "Jinja2==3.0.3", "jmespath==0.10.0", "MarkupSafe==2.0.1", "packaging==21.3", "pycparser==2.21", "Pygments==2.11.1", "pyparsing==3.0.6", "PyYAML==6.0", "resolvelib==0.5.4", "rich==10.16.1", "tenacity==8.0.1", "wcmatch==8.3"]
requires-python = ">=3.10,<4.0"
license = {text = "MIT"}

[project.urls]
